--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-showdown": "^1.0.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "10.7.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.0",
     "react-navigation-tabs": "^2.10.1",
