--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "apollo-boost": "^0.4.9",
     "expo": "~39.0.2",
+    "expo-linear-gradient": "^8.3.1",
     "expo-status-bar": "~1.0.2",
     "graphql": "^15.4.0",
     "react": "16.13.1",
